@startuml player_state_strategy

skinparam packageStyle rectangle

title FSM (State Pattern) & Abilities (Strategy Pattern)

package "Context Class" {
    class Character {
        - currentState: unique_ptr<CharacterState>
        - ability: unique_ptr<AbilityStrategy>
        + ChangeState(newState: unique_ptr<CharacterState>): void
        + SetAbility(newAbility: unique_ptr<AbilityStrategy>): void
        + Update(dt: float): void
        + UseAbility(): void
    }
}

package "State Pattern (FSM)" {
    abstract class CharacterState {
        # character: Character*
        + {abstract} HandleInput(): void
        + {abstract} Update(dt: float): void
    }

    class IdleState {
        + HandleInput(): void
        + Update(dt: float): void
    }

    class RunningState {
        + HandleInput(): void
        + Update(dt: float): void
    }

    class JumpingState {
        + HandleInput(): void
        + Update(dt: float): void
    }

    class FallingState {
        + HandleInput(): void
        + Update(dt: float): void
    }

    CharacterState <|-- IdleState
    CharacterState <|-- RunningState
    CharacterState <|-- JumpingState
    CharacterState <|-- FallingState
}

package "Strategy Pattern (Abilities)" {
    abstract class AbilityStrategy {
        + {abstract} Execute(character: Character&): void
    }

    class FireballAbility {
        + Execute(character: Character&): void
    }

    class DashAbility {
        + Execute(character: Character&): void
    }

    class HighJumpAbility {
        + Execute(character: Character&): void
    }

    AbilityStrategy <|.. FireballAbility
    AbilityStrategy <|.. DashAbility
    AbilityStrategy <|.. HighJumpAbility
}

Character *-- CharacterState : manages >
Character *-- AbilityStrategy : uses >

note top of CharacterState
  Mỗi State tự quản lý logic di chuyển
  và hình ảnh Animation riêng biệt.
  Loại bỏ hoàn toàn các biến bool isJumping, isRunning.
end note

note top of AbilityStrategy
  Kỹ năng đặc biệt được "lắp ráp" vào Character.
  Mario có thể lắp Fireball, lúc sau nhặt đồ
  có thể đổi sang lắp DashAbility.
  Rất linh hoạt, không cần sửa class Mario.
end note

@enduml
